Bug 292821 - drag and dropping files between two windows no longer works in 4.8
Summary: drag and dropping files between two windows no longer works in 4.8
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
: 290772 293425 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-01-29 20:45 UTC by illumilore
Modified: 2012-02-06 10:01 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description illumilore 2012-01-29 20:45:54 UTC
Version:           unspecified (using KDE 4.8.0) 
OS:                Linux

When I have two open dolphin windows in different folders of the same smb share, trying to drag one file from one window to the other window does nothing. If open in a terminal, it says:dolphin(4404) DolphinView::slotItemDropEvent: No destination item available for drop operation.
This only started happening in 4.8

Reproducible: Always

Steps to Reproduce:
na

Actual Results:  
na

Expected Results:  
na

na
Comment 1 FiNeX 2012-01-29 22:38:19 UTC
I've tried to reproduce this bug using two dolphin windows on two sftp locations.

- If you drag and drop without keyboard modifier the copy/move action works fine (after releasing the mouse the popup will appears).

- If you try a second time it doesn't work (nothing appears)

- If you try with the SHIFT modifier (move) nothing happens

- If you try with CTRL (copy) the file is created empty with the .part extension


Could be related to bug #292355 ?


P.S: CTRL+[X,C] / CTRL+V works fine
Comment 2 illumilore 2012-01-29 23:05:26 UTC
Moving without modifiers does not work for me, only copy and paste work.
Comment 3 Peter Penz 2012-01-30 08:09:26 UTC
I could reproduce the issue and hope that I can fix this today or tomorrow. Thanks for noticing the output-message, this was a good hint.
Comment 4 Peter Penz 2012-01-30 15:44:24 UTC
Git commit 43ffe9095ce543c60e0a5ef56f83e5bdfe45225e by Peter Penz.
Committed on 30/01/2012 at 12:07.
Pushed by ppenz into branch 'master'.

Fix drag & drop issues with non-local URLs
Related: bug 292355
FIXED-IN: 4.8.1

M  +1    -1    dolphin/src/dolphinmainwindow.cpp
M  +1    -2    dolphin/src/dolphinviewcontainer.cpp
M  +2    -6    dolphin/src/panels/folders/folderspanel.cpp
M  +1    -2    dolphin/src/panels/places/placespanel.cpp
M  +6    -11   dolphin/src/views/dolphinview.cpp
M  +6    -9    dolphin/src/views/draganddrophelper.cpp
M  +9    -2    dolphin/src/views/draganddrophelper.h

http://commits.kde.org/kde-baseapps/43ffe9095ce543c60e0a5ef56f83e5bdfe45225e
Comment 5 Peter Penz 2012-01-30 15:44:49 UTC
Git commit fdc20584aef44e148b0186e8034ddf667bfe9a07 by Peter Penz.
Committed on 30/01/2012 at 12:07.
Pushed by ppenz into branch 'KDE/4.8'.

Fix drag & drop issues with non-local URLs
Related: bug 292355
FIXED-IN: 4.8.1

M  +1    -1    dolphin/src/dolphinmainwindow.cpp
M  +1    -2    dolphin/src/dolphinviewcontainer.cpp
M  +2    -6    dolphin/src/panels/folders/folderspanel.cpp
M  +1    -2    dolphin/src/panels/places/placespanel.cpp
M  +6    -11   dolphin/src/views/dolphinview.cpp
M  +6    -9    dolphin/src/views/draganddrophelper.cpp
M  +9    -2    dolphin/src/views/draganddrophelper.h

http://commits.kde.org/kde-baseapps/fdc20584aef44e148b0186e8034ddf667bfe9a07
Comment 6 Peter Penz 2012-01-30 15:46:42 UTC
*** Bug 290772 has been marked as a duplicate of this bug. ***
Comment 7 illumilore 2012-01-30 22:52:27 UTC
This was a bug in 4.6, only to be fixed in a point release later, and then it came back in 4.7, only to be fixed later, and then came back yet again in 4.8. Is there any way to make this fix permanent? Also, does this fix the possibly related bug 292822 as well?
Comment 8 Peter Penz 2012-01-31 08:50:46 UTC
> Is there any way to make this fix permanent? 

I'm sorry for those regressions: There are bugs where it is straight forward to make an automatic regression test (e.g. by unit tests) and there are bugs that require "manual testing". This issue falls more into the "manual testing" category. Developers that have adjusted a code are the worst testers, as usecases which they forgot when changing the code also of course won't be tested by them as they simply did not think about that usecase. What really helps us here is feedback and tests from users when the beta-releases are available. If there is an issue that worked before, please add a big fat "regression" to the bug-report as those bugs have highest priority.

This regression has been introduced because of the new view-engine in Dolphin - there are no plans to rewrite the engine again so I hope this was the last regression regarding drag & drop ;-)

> Also, does this fix the possibly related bug 292822

I don't think it is related to bug 292822 (which I currently cannot reproduce due to having no samba setup).
Comment 9 Peter Penz 2012-02-06 10:01:59 UTC
*** Bug 293425 has been marked as a duplicate of this bug. ***