Fix drag & drop issues with non-local URLs

BUG: 292821
BUG: 292355
FIXED-IN: 4.8.1