src/panels/places/placespanel.cpp
@@ -48,8 +48,7 @@ void PlacesPanel::mousePressEvent(QMouseEvent* event)
 void PlacesPanel::slotUrlsDropped(const KUrl& dest, QDropEvent* event, QWidget* parent)
 {
     Q_UNUSED(parent);
-    const KFileItem destItem(KFileItem::Unknown, KFileItem::Unknown, dest);
-    DragAndDropHelper::dropUrls(destItem, event);
+    DragAndDropHelper::dropUrls(KFileItem(), dest, event);
 }
 
 void PlacesPanel::emitExtendedUrlChangedSignal(const KUrl& url)
